--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div ><input id="url_address">
     <button id="Search">Search</button></div> 
     <hr>
-    <h4 id="titles">hhgg</h4>
+    <h4 id="titles"></h4>
     <p id="content"></p>
 </body>
 <link rel="Stylesheet " href="style.css">
